# scope-overworld

./: .gitignore  README.md  download_models.py  pyproject.toml  test_pipeline.py
src/scope_overworld/: __init__.py  pipeline.py  schema.py  test.py  vbench.py
