[project]
name = "scope-overworld"
version = "0.1.0"
description = "OverWorld plugin for Daydream Scope"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "world-engine",
    # Optional kernel library behind the nvfp4 quant tier. flashinfer ships
    # Linux-only wheels (nvcc build step); Windows users pick intw8a8 or
    # fp8w8a8 instead and world_engine skips the nvfp4 code path.
    "flashinfer-python ; sys_platform == 'linux'",
]

[project.entry-points.scope]
scope-overworld = "scope_overworld"

[dependency-groups]
dev = [
    "daydream-scope",
]

[tool.uv]
override-dependencies = [
    # world_engine 1.5 needs torch==2.10.0 / triton==3.6.0 — torch 2.9.1's
    # inductor crashes on triton 3.6's kernel metadata (no `cluster_dims`,
    # fixed upstream in pytorch/pytorch#167187, shipped in 2.10.0).
    # daydream-scope 0.2.2 still pins 2.9.1 / triton 3.5.1; override both here.
    "torch==2.10.0",
    "torchvision==0.25.0",
    "triton==3.6.0 ; sys_platform == 'linux'",
    "triton-windows==3.6.0.post26 ; sys_platform == 'win32'",
]

[tool.uv.sources]
daydream-scope = { git = "https://github.com/daydreamlive/scope" }
world-engine = { git = "https://github.com/Overworldai/world_engine", branch = "main" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
