[project]
name = "scope-overworld"
version = "0.1.0"
description = "OverWorld plugin for Daydream Scope"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "world-engine",
    # Optional kernel library behind the nvfp4 quant tier. flashinfer ships
    # Linux-only wheels (nvcc build step); Windows users pick intw8a8 or
    # fp8w8a8 instead and world_engine skips the nvfp4 code path.
    "flashinfer-python ; sys_platform == 'linux'",
]

[project.entry-points.scope]
scope-overworld = "scope_overworld"

[dependency-groups]
dev = [
    "daydream-scope",
]

[tool.uv]
# Keep the plugin's transitive resolution locked to daydream-scope's torch/triton
# pins (2.9.1 / 3.5.1). world_engine on pin-torch-1.5 already pins the same, so
# these overrides are belt-and-suspenders against any loose transitive (taehv,
# gemlite, flashinfer) pulling a conflicting torch into scope's venv.
override-dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "triton==3.5.1 ; sys_platform == 'linux'",
    "triton-windows==3.5.1.post24 ; sys_platform == 'win32'",
]

[tool.uv.sources]
daydream-scope = { git = "https://github.com/daydreamlive/scope" }
world-engine = { git = "https://github.com/daydreamlive/world_engine", branch = "pin-torch-1.5" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
